--- a/index.html
+++ b/index.html
@@ -1901,7 +1901,7 @@
             class="col-lg-3 col-md-4 col-sm-6 d-flex flex-column last-paragraph-no-margin md-mb-40px xs-mb-30px"
           >
             <a
-              href="demo-elearning.html"
+              href="index.html"
               class="footer-logo mb-15px d-inline-block"
             >
               <img
@@ -1999,7 +1999,7 @@
             <ul class="footer-navbar fs-16 lh-normal">
               <li class="nav-item active">
                 <a
-                  href="demo-elearning.html"
+                  href="index.html"
                   class="nav-link ps-0"
                   >Home</a
                 >
