--- a/demo-elearning-courses.html
+++ b/demo-elearning-courses.html
@@ -29,7 +29,7 @@
             <nav class="navbar navbar-expand-lg header-transparent bg-transparent header-reverse" data-header-hover="light">
                 <div class="container-fluid">
                     <div class="col-auto col-lg-2 me-lg-0 me-auto">
-                        <a class="navbar-brand" href="demo-elearning.html">
+                        <a class="navbar-brand" href="index.html">
                             <img src="images/demo-elearning-logo-white.png" data-at2x="images/demo-elearning-logo-white@2x.png" alt="" class="default-logo">
                             <img src="images/demo-elearning-logo-black.png" data-at2x="images/demo-elearning-logo-black@2x.png" alt="" class="alt-logo">
                             <img src="images/demo-elearning-logo-black.png" data-at2x="images/demo-elearning-logo-black@2x.png" alt="" class="mobile-logo"> 
@@ -44,7 +44,7 @@
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNav"> 
                             <ul class="navbar-nav alt-font"> 
-                                <li class="nav-item"><a href="demo-elearning.html" class="nav-link">Home</a></li>
+                                <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
                                 <li class="nav-item"><a href="demo-elearning-about.html" class="nav-link">About</a></li>
                                 <li class="nav-item dropdown dropdown-with-icon">
                                     <a href="demo-elearning-courses.html" class="nav-link">Courses</a>
@@ -403,7 +403,7 @@
                   class="col-lg-3 col-md-4 col-sm-6 d-flex flex-column last-paragraph-no-margin md-mb-40px xs-mb-30px"
                 >
                   <a
-                    href="demo-elearning.html"
+                    href="index.html"
                     class="footer-logo mb-15px d-inline-block"
                   >
                     <img
@@ -501,7 +501,7 @@
                   <ul class="footer-navbar fs-16 lh-normal">
                     <li class="nav-item active">
                       <a
-                        href="demo-elearning.html"
+                        href="index.html"
                         class="nav-link ps-0"
                         >Home</a
                       >
