changed site title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   lang="en"
 >
   <head>
-    <title>Crafto - The Multipurpose HTML5 Template</title>
+    <title>E-learning</title>
     <meta charset="utf-8" />
     <meta
       http-equiv="X-UA-Compatible"
