--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <div class="col-auto col-lg-2 me-lg-0 me-auto">
             <a
               class="navbar-brand"
-              href="demo-elearning.html"
+              href="index.html"
             >
               <img
                 src="images/demo-elearning-logo-white.png"
