--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
               <ul class="navbar-nav alt-font">
                 <li class="nav-item">
                   <a
-                    href="demo-elearning.html"
+                    href="index.html"
                     class="nav-link"
                     >Home</a
                   >
