--- a/demo-elearning-testimonial.html
+++ b/demo-elearning-testimonial.html
@@ -55,25 +55,21 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-auto col-lg-2 text-end d-none d-sm-flex">
-                        <div class="header-icon">
-                            <div><div class="alt-font fw-500 lg-fs-15"><a href="tel:1800222000" class="widget-text text-white-hover"><i class="feather icon-feather-phone-call me-10px lg-me-5px"></i>1 800 222 000</a></div></div>
-                        </div>  
-                    </div>
+                  
                 </div>
             </nav>
             <!-- end navigation -->
         </header>
         <!-- end header --> 
         <!-- start page title -->
-        <section class="ipad-top-space-margin bg-dark-gray cover-background page-title-big-typography" style="background-image: url(https://via.placeholder.com/1920x540)">
+        <section class="ipad-top-space-margin bg-dark-gray cover-background page-title-big-typography object-fit-cover background-position-left-top" style="background-image: url(images/new/class.jpeg); filter: brightness(80%);">
             <div class="background-position-center-top h-100 w-100 position-absolute left-0px top-0" style="background-image: url('images/vertical-line-bg-small.svg')"></div>
             <div id="particles-style-01" class="h-100 position-absolute left-0px top-0 w-100" data-particle="true" data-particle-options='{"particles": {"number": {"value": 8,"density": {"enable": true,"value_area": 2000}},"color": {"value": ["#d5d52b", "#d5d52b", "#d5d52b", "#d5d52b", "#d5d52b"]},"shape": {"type": "circle","stroke":{"width":0,"color":"#000000"}},"opacity": {"value": 1,"random": false,"anim": {"enable": false,"speed": 1,"sync": false}},"size": {"value": 8,"random": true,"anim": {"enable": false,"sync": true}},"line_linked":{"enable":false,"distance":0,"color":"#ffffff","opacity":1,"width":1},"move": {"enable": true,"speed":1,"direction": "right","random": false,"straight": false}},"interactivity": {"detect_on": "canvas","events": {"onhover": {"enable": false,"mode": "repulse"},"onclick": {"enable": false,"mode": "push"},"resize": true}},"retina_detect": false}'></div>
             <div class="container">
                 <div class="row align-items-center extra-small-screen">
                     <div class="col-xl-6 col-lg-7 col-md-8 col-sm-9 position-relative page-title-extra-small" data-anime='{ "el": "childs", "translateY": [-15, 0], "perspective": [1200,1200], "scale": [1.1, 1], "rotateX": [50, 0], "opacity": [0,1], "duration": 800, "delay": 200, "staggervalue": 300, "easing": "easeOutQuad" }'>
-                        <h1 class="mb-20px alt-font text-yellow">Student's testimonial</h1>
-                        <h2 class="fw-500 m-0 ls-minus-2px text-white alt-font">What our brilliant students are say.</h2>
+                        <h1 class="mb-20px alt-font " style="color: yellow; font-size: 30px;">Student's testimonial</h1>
+                        <h2 class="fw-500 m-0 ls-minus-2px text-white alt-font">What our brilliant students are saying.</h2>
                     </div>
                 </div>
             </div>
@@ -90,7 +86,7 @@
                     <div class="col review-style-07 mb-30px"> 
                         <div class="d-flex justify-content-center h-100 flex-column border-radius-6px p-12 xl-p-10 bg-white box-shadow-quadruple-large">
                             <div class="mb-20px">
-                                <img src="https://via.placeholder.com/148x148" class="rounded-circle w-90px lg-w-65px me-15px" alt="">
+                                <img src="images/new/guy.jpg" class="rounded-circle w-70px h-70px object-fit-contain me-15px" alt="">
                                 <div class="d-inline-block align-middle"> 
                                     <div class="text-dark-gray fs-18 fw-600">Alex sanchez</div>
                                     <div class="lh-24 fs-16">Course design</div>
@@ -113,7 +109,7 @@
                     <div class="col review-style-07 mb-30px"> 
                         <div class="d-flex justify-content-center h-100 flex-column border-radius-6px p-12 xl-p-10 bg-white box-shadow-quadruple-large">
                             <div class="mb-20px">
-                                <img src="https://via.placeholder.com/148x148" class="rounded-circle w-90px lg-w-65px me-15px" alt="">
+                              <img src="images/new/heroimg.jpg" class="rounded-circle w-70px h-70px object-fit-contain me-15px" alt="">
                                 <div class="d-inline-block align-middle"> 
                                     <div class="text-dark-gray fs-18 fw-600">Matthew taylor</div>
                                     <div class="lh-24 fs-16">Interface analysis</div>
@@ -136,7 +132,7 @@
                     <div class="col review-style-07 mb-30px"> 
                         <div class="d-flex justify-content-center h-100 flex-column border-radius-6px p-12 xl-p-10 bg-white box-shadow-quadruple-large">
                             <div class="mb-20px">
-                                <img src="https://via.placeholder.com/148x148" class="rounded-circle w-90px lg-w-65px me-15px" alt="">
+                              <img src="images/new/heroimg1.jpg" class="rounded-circle w-70px h-70px object-fit-contain me-15px" alt="">
                                 <div class="d-inline-block align-middle"> 
                                     <div class="text-dark-gray fs-18 fw-600">Leonel mooney</div>
                                     <div class="lh-24 fs-16">Usability testing</div>
@@ -159,7 +155,7 @@
                     <div class="col review-style-07 md-mb-30px"> 
                         <div class="d-flex justify-content-center h-100 flex-column border-radius-6px p-12 xl-p-10 bg-white box-shadow-quadruple-large">
                             <div class="mb-20px">
-                                <img src="https://via.placeholder.com/200x200" class="rounded-circle w-90px lg-w-65px me-15px" alt="">
+                              <img src="images/new/her2.jpg" class="rounded-circle w-70px h-70px object-fit-contain me-15px" alt="">
                                 <div class="d-inline-block align-middle"> 
                                     <div class="text-dark-gray fs-18 fw-600">Jacob kalling</div>
                                     <div class="lh-24 fs-16">System design</div>
@@ -182,7 +178,7 @@
                     <div class="col review-style-07 sm-mb-30px"> 
                         <div class="d-flex justify-content-center h-100 flex-column border-radius-6px p-12 xl-p-10 bg-white box-shadow-quadruple-large">
                             <div class="mb-20px">
-                                <img src="https://via.placeholder.com/200x200" class="rounded-circle w-90px lg-w-65px me-15px" alt="">
+                              <img src="images/new/rev2.webp" class="rounded-circle w-70px h-70px object-fit-contain me-15px" alt="">
                                 <div class="d-inline-block align-middle"> 
                                     <div class="text-dark-gray fs-18 fw-600">Jeremy dupont</div>
                                     <div class="lh-24 fs-16">Graphic design</div>
@@ -205,7 +201,7 @@
                     <div class="col review-style-07"> 
                         <div class="d-flex justify-content-center h-100 flex-column border-radius-6px p-12 xl-p-10 bg-white box-shadow-quadruple-large">
                             <div class="mb-20px">
-                                <img src="https://via.placeholder.com/200x200" class="rounded-circle w-90px lg-w-65px me-15px" alt="">
+                              <img src="images/new/rev1.jpeg" class="rounded-circle w-70px h-70px object-fit-contain me-15px" alt="">
                                 <div class="d-inline-block align-middle"> 
                                     <div class="text-dark-gray fs-18 fw-600">Daniel mark</div>
                                     <div class="lh-24 fs-16">Technical writing</div>
@@ -225,7 +221,7 @@
                     </div>
                     <!-- end review item -->
                 </div> 
-                <div class="fs-20 ls-minus-05px fw-500 text-dark-gray w-100 text-center"><img src="https://via.placeholder.com/156x113" alt=""><span class="d-block d-sm-inline-block position-relative xs-top-minus-10px"><span class="fw-700 text-decoration-line-bottom">10000+ student</span> trusting our eLearning classes.</span></div>
+                <div class="fs-20 ls-minus-05px fw-500 text-dark-gray w-100 text-center"><img src="images/new/iso1.webp" class="w-100px me-10px" alt=""><span class="d-block d-sm-inline-block position-relative xs-top-minus-10px"><span class="fw-700 text-decoration-line-bottom">10000+ student</span> trusting our eLearning classes.</span></div>
             </div>
         </section>
         <!-- end section -->
@@ -235,17 +231,17 @@
                 <div class="row justify-content-center align-items-center">
                     <div class="col-md-6 text-center text-lg-start sm-mb-30px" data-anime='{ "opacity": [0,1], "duration": 600, "delay": 100, "staggervalue": 300, "easing": "easeOutQuad" }'> 
                         <figure class="position-relative m-0">
-                            <img class="border-radius-6px" src="https://via.placeholder.com/580x615" alt="">
+                            <img class="border-radius-6px" src="images/new/iso4.webp" alt="">
                             <figcaption class="position-absolute bg-white border-radius-100px p-10px box-shadow-double-large bottom-100px md-bottom-70px xs-bottom-40px left-minus-30px sm-left-0px w-350px md-w-300px text-start last-paragraph-no-margin animation-float">
                                 <div class="row align-items-center">
                                     <div class="col-auto pe-0">
-                                        <img class="rounded-circle w-80px me-20px md-w-50px xs-w-50px" src="https://via.placeholder.com/148x148" alt="" />
+                                        <img class="border-radius-10px w-40px me-20px " src="images/new/iso1.webp" alt="" />
                                     </div>
                                     <div class="col ps-0">
                                         <span class="fs-18 text-dark-gray fw-500 ls-minus-05px d-block lh-26 md-fs-17"><span class="fw-800">Rachel</span> has liked this classes!</span>
                                     </div>
                                     <div class="col-auto">
-                                        <img class="me-20px mt-minus-4 md-w-30px" src="https://via.placeholder.com/46x51" alt="" />
+                                        <img class="me-20px border-radius-10px mt-minus-4 w-40px" src="images/new/iso2.webp" alt="" />
                                     </div>
                                 </div>
                             </figcaption>
@@ -263,7 +259,7 @@
                             </div>
                         </div>
                         <h2 class="alt-font text-dark-gray fw-600 ls-minus-3px">Genius people to say positive words.</h2>
-                        <p class="mb-30px xs-mb-20px">Lorem ipsum is simply dummy text of the printing and typesetting industry an unknown printer. Lorem ipsum is simply dummy text of the printing and typesetting.</p>
+                       
                         <div class="d-flex align-items-center">
                             <div class="col-auto text-center border-end border-color-extra-medium-gray border-1 me-25px pe-25px"><h2 class="alt-font lh-44 fw-600 text-dark-gray mb-0">99%</h2></div>
                             <div class="col">
