--- a/demo-elearning-contact.html
+++ b/demo-elearning-contact.html
@@ -55,24 +55,20 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-auto col-lg-2 text-end d-none d-sm-flex">
-                        <div class="header-icon">
-                            <div><div class="alt-font fw-500 lg-fs-15"><a href="tel:1800222000" class="widget-text text-white-hover"><i class="feather icon-feather-phone-call me-10px lg-me-5px"></i>1 800 222 000</a></div></div>
-                        </div>  
-                    </div>
+                    
                 </div>
             </nav>
             <!-- end navigation -->
         </header>
         <!-- end header --> 
         <!-- start page title -->
-        <section class="ipad-top-space-margin bg-dark-gray cover-background page-title-big-typography" style="background-image: url(https://via.placeholder.com/1920x540)">
+        <section class="ipad-top-space-margin bg-dark-gray cover-background page-title-big-typography object-fit-contain background-position-right-bottom" style="background-image: url(images/new/contact.jpg); filter: brightness(85%);">
             <div class="background-position-center-top h-100 w-100 position-absolute left-0px top-0" style="background-image: url('images/vertical-line-bg-small.svg')"></div>
             <div id="particles-style-01" class="h-100 position-absolute left-0px top-0 w-100" data-particle="true" data-particle-options='{"particles": {"number": {"value": 8,"density": {"enable": true,"value_area": 2000}},"color": {"value": ["#d5d52b", "#d5d52b", "#d5d52b", "#d5d52b", "#d5d52b"]},"shape": {"type": "circle","stroke":{"width":0,"color":"#000000"}},"opacity": {"value": 1,"random": false,"anim": {"enable": false,"speed": 1,"sync": false}},"size": {"value": 8,"random": true,"anim": {"enable": false,"sync": true}},"line_linked":{"enable":false,"distance":0,"color":"#ffffff","opacity":1,"width":1},"move": {"enable": true,"speed":1,"direction": "right","random": false,"straight": false}},"interactivity": {"detect_on": "canvas","events": {"onhover": {"enable": false,"mode": "repulse"},"onclick": {"enable": false,"mode": "push"},"resize": true}},"retina_detect": false}'></div>
             <div class="container">
                 <div class="row align-items-center extra-small-screen">
                     <div class="col-xl-6 col-lg-7 col-md-8 col-sm-9 position-relative page-title-extra-small" data-anime='{ "el": "childs", "translateY": [-15, 0], "perspective": [1200,1200], "scale": [1.1, 1], "rotateX": [50, 0], "opacity": [0,1], "duration": 800, "delay": 200, "staggervalue": 300, "easing": "easeOutQuad" }'>
-                        <h1 class="mb-20px alt-font text-yellow">Contact us</h1>
+                        <h1 class="mb-20px alt-font" style="color: yellow; font-size: 30px;">Contact us</h1>
                         <h2 class="fw-500 m-0 ls-minus-2px text-white alt-font">We'd love to hear from your side. </h2>
                     </div>
                 </div>
@@ -92,29 +88,7 @@
                         <p>We're here to help and answer any question you might have. we look forward to hearing from you. any need help you please contact us or meet to office with coffee.</p>
                     </div>
                 </div> 
-                <div class="row">
-                    <div class="col-12 sm-mb-30px">
-                        <div id="map" class="map h-650px md-h-550px sm-h-450px border-radius-6px" data-map-options='{ "lat": -37.817240, "lng": 144.955820, "style": "night", "marker": { "type": "image", "class": "marker01", "src": "https://via.placeholder.com/75x95" }, "popup": { "defaultOpen": false, "html": "<div class=infowindow><strong class=\"mb-3 d-inline-block alt-font\">Crafto eLearning</strong><p class=\"alt-font\">16122 Collins street, Melbourne, Australia</p></div><div class=\"google-maps-link alt-font\"> <a class=\"text-white\" aria-label=\"View larger map\" target=\"_blank\" jstcache=\"31\" href=\"https://maps.google.com/maps?ll=-37.805688,144.962312&amp;z=17&amp;t=m&amp;hl=en-US&amp;gl=IN&amp;mapclient=embed&amp;cid=13153204942596594449\" jsaction=\"mouseup:placeCard.largerMap\">VIEW LARGER MAP</a></div>" } }'></div>
-                    </div> 
-                    <div class="col-lg-5 col-md-6 contact-form-style-03 position-absolute sm-position-relative right-0px bottom-0" data-anime='{ "opacity": [0, 1], "translateY": [-20, 0], "translateX": [-20, 0], "staggervalue": 100, "easing": "easeOutQuad" }'> 
-                        <div class="bg-white p-13 md-p-10 position-relative overflow-hidden background-no-repeat background-position-right-bottom box-shadow-extra-large" style="background-image: url(images/demo-elearning-contact-bg-01.png)">
-                            <div>
-                                <h6 class="alt-font text-dark-gray fw-600 ls-minus-1px mb-5px">Crafto - London</h6>
-                                <p class="w-100 mb-10px">401 Broadway, 24th Floor,<br>Orchard View, London, UK</p>
-                                <div class="w-100 d-block">
-                                    <span class="d-block"><span class="text-dark-gray fw-600">T:</span><a href="tel:1234567890"> 123 456 7890</a></span>
-                                    <span class="d-block"><span class="text-dark-gray fw-600">E:</span> <a href="mailto:info@yourdomain.com" class="text-dark-gray text-decoration-line-bottom fw-600">info@yourdomain.com</a></span>
-                                    <a href="https://maps.google.com/maps?ll=-37.805688,144.962312&amp;z=17&amp;t=m&amp;hl=en-US&amp;gl=IN&amp;mapclient=embed&amp;cid=13153204942596594449" target="_blank" class="btn btn-large btn-dark-gray btn-box-shadow btn-rounded btn-switch-text mt-35px">
-                                        <span>
-                                            <span class="btn-double-text" data-text="View on google map">View on google map</span>
-                                            <span><i class="fa-solid fa-arrow-right"></i></span>
-                                        </span>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                
                 <div class="position-absolute bottom-130px z-index-minus-1 w-100 left-0px d-none d-lg-block">
                     <div class="row position-relative mt-50px">
                         <div class="col-12">
